# flask-assets-pipeline

./: .gitignore  README.md  pyproject.toml
examples/: package-lock.json  package.json
examples/esm/: app.py
examples/esm/assets/: alert.js  base.js  page.js
examples/esm/templates/: index.html  layout.html  page.html
examples/inline/: app.py
examples/inline/templates/: index.html  layout.html  page.html  table.html
examples/nobuild/: app.py
examples/nobuild/static/: app.js
examples/nobuild/templates/: index.html
examples/tailwind/: app.py  tailwind.config.js
examples/tailwind/static/: app.js
examples/tailwind/templates/: index.html
flask_assets_pipeline/: __init__.py  builder.py  cli.py  esbuild.mjs  jinja.py  livereload.py  tailwind.config.js  utils.py
flask_assets_pipeline/builders/: cache-worker.js  cache_worker.py  esbuild.py  node_deps.py  tailwind.py  templates.py
src/flask_assets_pipeline/: __init__.py  builder.py  jinja.py  livereload.py  utils.py
src/flask_assets_pipeline/builders/: cache-worker.js  cache_worker.py  esbuild.py  tailwind.py  templates.py
