[tool.poetry]
name = "flask-assets-pipeline"
version = "0.1.4"
description = "Modern asset pipeline for Flask"
authors = ["Maxime Bouroumeau-Fuseau <maxime.bouroumeau@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hyperflask/flask-assets-pipeline"
packages = [{include = "flask_assets_pipeline"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"
watchdog = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.4.3"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
